.k8s/app/ingress/nginx-app-fcgi.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "FCGI"
    nginx.ingress.kubernetes.io/fastcgi-index: "index.php"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header l5d-dst-override $service_name.$namespace.svc.cluster.local:$service_port;
      grpc_set_header l5d-dst-override $service_name.$namespace.svc.cluster.local:$service_port;
      server_tokens off;
    nginx.ingress.kubernetes.io/fastcgi-params-configmap: "transcode-v2-nginx-ingress-configmap"
  name: transcode-v2-app-ingress-fcgi
spec:
  tls:
    - hosts:
        - transcode-v2.psmcode.com
      secretName: psmcode-com-wildcard
  rules:
    - host: transcode-v2.psmcode.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: transcode-v2-app-service
                port:
                  name: tc2-fcgi
